...
    override val accountSectionPosts = "Posts"
    override val accountSectionAll = "Posts & Replies"
    override val accountSectionPinned = "Pinned"
    override val accountSectionMedia = "Media"
    override val postTitle = "Post"
    override val settingsTitle = "Settings"
    override val settingsHeaderGeneral = "General"
    override val settingsItemLanguage = "Language"
    override val settingsHeaderLookAndFeel = "Look & feel"
    override val settingsItemTheme = "UI theme"
    override val settingsItemFontFamily = "Font family"
    override val settingsItemDynamicColors = "Material You"
    override val settingsItemDynamicColorsSubtitle = "generate a palette based on your background"
...
    override val actionUnblock = "Unblock"
    override val loginMethodBasic = "legacy"
    override val actionPin = "Pin to profile"
    override val actionUnpin = "Unpin from profile"
    override val settingsSectionDebug = "Debug"
    override val settingsAbout = "App information"
    override val settingsAboutAppVersion = "Version"
    override val settingsAboutChangelog = "Changelog"
    override val settingsAboutViewGithub = "View on GitHub"
    override val settingsAboutReportIssue = "Report an issue"
    override val settingsAboutViewFriendica = "View on Friendica"
    override val manageCirclesTitle = "Circles"
    override val createCircleTitle = "Create circle"
...
    override val editProfileSectionFields = "Custom fields (experimental)"
    override val editProfileItemFieldKey = "Key"
    override val editProfileItemFieldValue = "Value"
    override val editProfileSectionImages = "Images (experimental)"
    override val editProfileItemAvatar = "Avatar"
    override val editProfileItemHeader = "Banner"
    override val nodeInfoTitle = "Node info"
    override val nodeInfoSectionRules = "Rules"
    override val nodeInfoSectionContact = "Contact"
    override val actionAddNew = "Add new"
    override val directMessagesTitle = "Direct messages"

    override fun messages(count: Int): String =
        when (count) {
            1 -> "message"
...
    override val scheduleDateIndication = "Scheduled for:"
    override val messageScheduleDateInThePast = "Please select a schedule date in the future"
    override val actionSaveDraft = "Save draft"
    override val settingsItemDefaultPostVisibility = "Default visibility for posts"
    override val settingsItemDefaultReplyVisibility = "Default visibility for replies"
    override val reportCategoryLegal = "Legal issue"
    override val itemOther = "Other"
    override val reportCategorySpam = "Spam"
    override val reportCategoryViolation = "Server rule violation"
    override val messageMissingRules = "Please select at least one rule"
    override val createReportTitleUser = "Report"
    override val createReportTitleEntry = "Report post by"
    override val createReportItemCategory = "Category"
...
