...
@Composable
@Preview
private fun AboutDialogContentPreview() {
    PreviewWrapper {
        AboutDialogContent(
            appInfo = AppInfo(
                versionCode = "1.0.0",
                isDebug = true,
            ),
            mainRouter = null,
        )
    }
}
...
